feat: start with api for UI
